# codeChallenges

./: README.md
basicTasks/basicTasks/: CMakeLists.txt
basicTasks/basicTasks/basicTasks/: CMakeLists.txt  readFile.cpp  readFile.h
basicTasks/basicTasks/data/: list1.txt
mondrianPuzzle/mondrianPuzzle/: CMakeLists.txt
mondrianPuzzle/mondrianPuzzle/mondrianPuzzle/: CMakeLists.txt  mondrianPuzzle.cpp  mondrianPuzzle.h
