# CMakeList.txt: CMake-Projekt für "basicTasks". Schließen Sie die Quelle ein, und definieren Sie
# projektspezifische Logik hier.
#
cmake_minimum_required (VERSION 3.0)

# Fügen Sie der ausführbaren Datei dieses Projekts eine Quelle hinzu.
add_executable (basicTasks "readFile.cpp" "readFile.h")

# TODO: Fügen Sie bei Bedarf Tests hinzu, und installieren Sie Ziele.
