# CMakeList.txt: CMake-Projekt für "mondrianPuzzle". Schließen Sie die Quelle ein, und definieren Sie
# projektspezifische Logik hier.
#
cmake_minimum_required (VERSION 3.0)

# Fügen Sie der ausführbaren Datei für dieses Projekt eine Quelle hinzu.
add_executable (mondrianPuzzle "mondrianPuzzle.cpp" "mondrianPuzzle.h")

# TODO: Fügen Sie bei Bedarf Tests und Installationsziele hinzu.
